--- a/djinn_pages/templates/djinn_pages/iframe.html
+++ b/djinn_pages/templates/djinn_pages/iframe.html
@@ -2,6 +2,6 @@
 
 {% block container %}
 
-<iframe sandbox="allow-top-navigation" src="{{ load_url }}"></iframe>
+<iframe class="fullbox" sandbox="allow-scripts allow-forms allow-same-origin allow-top-navigation" src="{{ load_url }}"></iframe>
 
 {% endblock %}
