removed sandbox as fix for problems with topdesk

--- a/djinn_pages/templates/djinn_pages/iframe.html
+++ b/djinn_pages/templates/djinn_pages/iframe.html
@@ -12,7 +12,13 @@
 {% block container %}
 
     <div id="ifrmcontent">
+        {% comment %}
         <iframe class="fullbox" seamless='seamless' sandbox="allow-scripts allow-forms allow-same-origin allow-top-navigation allow-popups" src="{{ load_url }}"></iframe>
+        sandbox gaf problemen met
+         - download pdf's nadat vanuit topdesk de download pagina geopend werd
+         - niet laden van silverlight app (repro-pagina in topdesk)
+        {% endcomment %}
+        <iframe class="fullbox" seamless='seamless' src="{{ load_url }}"></iframe>
     </div>
 
 {% endblock %}
