--- a/djinn_pages/templates/djinn_pages/snippets/menuitem.html
+++ b/djinn_pages/templates/djinn_pages/snippets/menuitem.html
@@ -1,10 +1,24 @@
 {% load djinn_pages_tags %}
 {% for menuitem in menuitems %}
-<li{% if menuitem.has_sub %} class="with-sub"{% endif %}>
-    <a href="{{ menuitem.url }}">{{ menuitem.title }}</a>
+{#<li{% if menuitem.has_sub %} class="with-sub"{% endif %}>#}
+{#    <a href="{{ menuitem.url }}">{{ menuitem.title }}</a>#}
+{#    {% if menuitem.has_sub %}#}
+{#    <div class="sub">#}
+{#        <ul>#}
+{#        {% custommenu menuitem %}#}
+{#        </ul>#}
+{#    </div>#}
+{#    {% endif %}#}
+{#</li>#}
+<li{% if menuitem.has_sub %} class="with-sub" x-data="{show: false}" x-on:mouseover="show = true" x-on:click="show = ! show" x-on:mouseout="show=false"{% endif %}>
+    <a href="{{ menuitem.url }}">{{ menuitem.title }}
     {% if menuitem.has_sub %}
-    <div class="sub">
-        <ul>
+    <svg class="ml-1 w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+    {% endif %}
+    </a>
+    {% if menuitem.has_sub %}
+    <div class="sub" x-on:mouseleave="show = false">
+        <ul x-show="show">
         {% custommenu menuitem %}
         </ul>
     </div>
